# qwentts.cpp

./: .gitignore  CMakeLists.txt  convert.py  converter_talker.py  converter_tokenizer.py  lessons.md
${PROJECT_ROOT}/.opencode/: memory.db  memory.db-shm  memory.db-wal
.github/workflows/: ci.yml
src/: audio-io.h  audio-resample.h  backend.cpp  backend.h  bpe.h  causal-trans-conv.h  code-predictor-forward.cpp  code-predictor-forward.h  code-predictor-weights.h  convnext-block.h  dac-decoder-v2.h  debug.h  encoder-downsample.h  encoder-transformer.h  gguf-weights.h  int-util.h  kv-cache.h  pipeline-tts.cpp  pipeline-tts.h  prompt-builder.h  quantizer-decode.h  quantizer-encode.h  qwen.cpp  qwen.h  rvq-file.h  scope-guard.h  seanet-encoder.h  speaker-encoder-extract.h  speaker-encoder-weights.h  talker-forward.cpp  talker-forward.h  talker-weights.h  tokenizer-transformer.h  tts-server.h  wav.h  weight-ctx.h
tests/: test-ints.cpp
tools/: qwen-tts.cpp
